--- a/produkter/dame-blazer.html
+++ b/produkter/dame-blazer.html
@@ -297,12 +297,12 @@
             <div class="tab-content">
                 <div class="tab-content-inner">
                     <div id="payment-logos"> 
-                    <img src="img/Visa logo.png" alt="visa logo">
-                    <img src="img/Mastercard logo.png" alt="mastercard logo">
-                    <img src="img/dankort logo.png" alt="dankort logo">
-                    <img src="img/mobilpay logo.png" alt="mobilpay logo">
-                    <img src="img/google pay logo.png" alt="googlepay logo">
-                    <img src="img/apple pay logo.png" alt="apple pay logo">
+                    <img src="../img/Visa logo.png" alt="visa logo">
+                    <img src="../img/Mastercard logo.png" alt="mastercard logo">
+                    <img src="../img/dankort logo.png" alt="dankort logo">
+                    <img src="../img/mobilpay logo.png" alt="mobilpay logo">
+                    <img src="../img/google pay logo.png" alt="googlepay logo">
+                    <img src="../img/apple pay logo.png" alt="apple pay logo">
                     </div>
                 </div>
             </div>
