--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
                         <p class="matrialer-paragraf">Bambus</p>
                     </div>
                     <div>
-                        <img id="matriale-img" src="img/Økologisk Bomuld Org.png" alt="Økologisk bomuld">
+                        <img id="matriale-img" src="img/Okologisk Bomuld Org.png" alt="Økologisk bomuld">
                         <p class="matrialer-paragraf">Økologisk Bomuld</p>
                     </div>
                     <div>
-                        <img id="matriale-img" src="img/Hør Org.png" alt="Hør">
+                        <img id="matriale-img" src="img/Hor Org.png" alt="Hør">
                         <p class="matrialer-paragraf">Hør</p>
                     </div>
                 </div>
