--- a/produkter/dame-blazer.html
+++ b/produkter/dame-blazer.html
@@ -256,7 +256,7 @@
                         <h3>Godt for miljøet & dig!</h3>
                     </div>
                     <div class="row flex-start">
-                        <img src="../img/hør-ikon.png" />
+                        <img src="../img/hr-ikon.png" />
                         <p>Ved at købe bæredygtigt tøj, er du med til at skåne miljøet. Hør er en naturfiber, der udskiller et lavt klimaaftryk. Det er en fiber der ikke har brug for gødning og beskyttelsesmidler, ved at benytte hør, går der intet til spilde i produktionen, da det overskydende materiale bliver brugt til fremstilling af andre produkter. Hør absorbere fugt og på den måde hjælper den kroppen til at regulere ens kropstemperatur</p>
                     </div>
                     <br />
