--- a/produkter/dame-blazer.html
+++ b/produkter/dame-blazer.html
@@ -256,7 +256,7 @@
                         <h3>Godt for miljøet & dig!</h3>
                     </div>
                     <div class="row flex-start">
-                        <img src="../img/hr-ikon.png" />
+                        <img src="../img/hor-ikon.png" />
                         <p>Ved at købe bæredygtigt tøj, er du med til at skåne miljøet. Hør er en naturfiber, der udskiller et lavt klimaaftryk. Det er en fiber der ikke har brug for gødning og beskyttelsesmidler, ved at benytte hør, går der intet til spilde i produktionen, da det overskydende materiale bliver brugt til fremstilling af andre produkter. Hør absorbere fugt og på den måde hjælper den kroppen til at regulere ens kropstemperatur</p>
                     </div>
                     <br />
@@ -266,7 +266,7 @@
                     </div>
                     <br />
                     <div class="row flex-start">
-                        <img src="../img/svanemærke-ikon.png" />
+                        <img src="../img/svanemarke-ikon.png" />
                         <p>Ved at donere dit gamle tøj, vil vi kunne disponere det til andre producenter, der vil få det produceret til nye produkter.
                             De materialer vi kan bruge i vores produktion er indleveret bambus, økologisk bomuld og hør tekstiler, som vi så vil få omdannet til nye lækre tekstiler.</p>
                     </div>
